--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-my-nav></app-my-nav>
-<app-my-card></app-my-card>
+<div style="display: flex; justify-content: space-around">
+  <app-my-card></app-my-card>
+  <app-my-card></app-my-card>
+  <app-my-card></app-my-card>
+</div>
