--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-my-nav></app-my-nav>
-<div style="display: flex; justify-content: space-around">
+<div class="container">
   <app-my-card></app-my-card>
   <app-my-card></app-my-card>
   <app-my-card></app-my-card>
